feat: 온보딩 관리 4가지 화면 초안 구현 (핏체크/자기평가 리스트 및 상세)

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
 @import url("./components/tabs.css");
 @import url("./pages/offboarding-detail.css");
 @import url("./pages/employee-list.css");
+@import url("./pages/onboarding-fitcheck.css");
+@import url("./pages/onboarding-self-eval.css");
 @import url("./components/components-preview.css");
 
 :root {
